# buddhistAI-cataloger

./: .gitignore  CLARITY_FIX_SUMMARY.md  CLARITY_SETUP.md  CLARITY_TROUBLESHOOTING.md  Dockerfile  OUTLINER_FEATURES.md  RFC-outliner.md  database_clean.ipynb  delete_list.json  docker-compose.prod.yml  docker-compose.yml  documentations links.md  openclaw_documentation_README.md  outliner_api_restructure_summary.md  segments_to_alignment_payload.py  test  test_upload.py  volume_ids.txt  volume_ids_back.txt
backend/: .env.example  README.md  app.js  main.py  package-lock.json  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0a8df555c271_add_reviewrid_on_document.py  16b9c8abd52c_add_user_role.py  1c72bb1d87bb_add_reject_comment.py  23264f32c6b1_add_is_category_and_order.py  28d6360e19ce_add_resolve_on_rejection.py  3cb9ee4dd4e6_add_reviewer_edit.py  (+32 more)
backend/bdrc/: main.py  person.py  search.py  volume.py  work.py
backend/cataloger/: __init__.py
backend/controller/: admin.py  ai.py  enum.py  outliner.py
backend/core/: auth0_access_token.py  config.py  database.py  redis.py
backend/models/: membership.py  outliner.py  tenant_settings.py  user.py
backend/outliner/: __init__.py  bec_otapi_client.py  deps.py
backend/prompts/: ai_prompts.py
backend/routers/: admin.py  ai.py  annotation.py  bdrc.py  category.py  enum.py  outliner.py  person.py  text.py  tokenize.py  translation.py
backend/routes/: text.js
backend/utils/: clean_tibetan_text.py  outliner_utils.py  segmentor.py  test.ipynb
frontend/: index.html  (+6 more)
(+458 files in other folders)
