[tool.poetry]
name = "cataloger"
version = "1.0.0"
description = "API for managing OpenPecha texts and persons"
authors = ["OpenPecha <info@openpecha.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Core web stack
fastapi = "0.121.0"
uvicorn = {extras = ["standard"], version = ">=0.23,<0.30"}
mangum = ">=0.17"

# Async / IO
aiofiles = ">=23.2"
anyio = ">=4.0,<5.0"
httpx = ">=0.26,<0.28"

# Data / validation
pydantic = {version = "2.12.3", extras = ["email"]}

# NLP / Tibetan
botok = "0.9.0"
pyewts = "0.2.0"

# Utilities
python-dotenv = ">=1.0"
python-multipart = ">=0.0.9"
PyYAML = ">=6.0"
tqdm = ">=4.66"

# RDF / APIs
rdflib = ">=7.3"
requests = ">=2.31"

# Database
sqlalchemy = ">=1.4,<2.1"
alembic = ">=1.7"
psycopg2-binary = "*"

# Cache
redis = ">=5.0"

# GenAI
google-genai = "*"

# Git dependencies
BoSegmenter = {git = "https://github.com/OpenPecha/BoSegmenter.git", rev = "d31da9d9cc913ddb01e006446f66191078875d95"}
fast-antx = {git = "https://github.com/OpenPecha/fast-antx.git", rev = "4dad71a8340c3e400e59ab70027347698648f1b0"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
